--- a/app/src/main/res/layout/activity_register_step_one.xml
+++ b/app/src/main/res/layout/activity_register_step_one.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eff1f7"
-    tools:context=".RegisterActivity">
+    tools:context=".HostActivity">
 
     <EditText
         android:id="@+id/firstName"
@@ -43,6 +43,15 @@
         app:layout_constraintTop_toBottomOf="@+id/firstName"
         android:importantForAutofill="no" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:text="@string/select_institute"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/institute" />
+
     <Spinner
         android:id="@+id/institute"
         android:layout_width="350dp"
@@ -51,9 +60,44 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="31dp"
         android:background="#FFFFFF"
+        android:entries="@array/instituteSpinnerItems"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lastName"
         tools:ignore="RtlHardcoded" />
+
+    <Spinner
+        android:id="@+id/department"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="31dp"
+        android:background="#FFFFFF"
+        android:entries="@array/departmentSpinnerItems"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:text="@string/select_department"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/department" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="25dp"
+        android:background="#687089"
+        android:text="@string/next"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
