--- a/app/src/main/res/layout/activity_register_step_one.xml
+++ b/app/src/main/res/layout/activity_register_step_one.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eff1f7"
-    tools:context=".HostActivity">
+    tools:context=".RegistrationFirstStepActivity">
 
     <EditText
         android:id="@+id/firstName"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/department" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="31dp"
